fix(button): progress showing on mobile at 0

--- a/src/prefabs/button/button.scss
+++ b/src/prefabs/button/button.scss
@@ -238,6 +238,7 @@ $button-z-tooltip: $button-z-cost + 1;
     z-index: $button-z-progress;
     border-bottom-left-radius: $button-border-radius - 1;
     border-bottom-right-radius: $button-border-radius - 1;
+    display: none;
 
     &::before,
     > div {
@@ -249,6 +250,10 @@ $button-z-tooltip: $button-z-cost + 1;
         background: $button-progress-background;
         transform: translateY(100%);
         transition: transform $easing-default-duration;
+    }
+
+    &.enabled {
+      display: block;
     }
 
     &.enabled::before {
